2.0 unreleased
==============

- Removed the weird Zope2 Interface to zope.interface bridging code.
  [hannosch]

- Removed annoying license statements from the source files. We have a central
  license.txt for that.
  [hannosch]

- Removed module aliases for content created before ATCT 1.0.
  [hannosch]

- Adjusted code to current Plone trunk after some deprecated code got removed.
  Moved old_folder_contents code into atct_topic_subtopics.
  [hannosch]

- Fixed some test failures concerning criterion editing.
  [hannosch]

- Adjusted reindex sanity tests to changed order of the indexing calls.
  [hannosch]

- Increase the version number to 2.0, to make it possible to release minor
  feature releases for the Plone 3.x line.
  [hannosch]

- Adjusted events test to new reality including zope.app.container and
  DCWorkflow events.
  [hannosch]

- Removed half-implemented and unmaintained archive and adapters code.
  [hannosch]

- Removed unmaintained and unused Favorite content type.
  [hannosch]

- Removed references to external editor in comments.
  [hannosch]

- Forward-port fix for http://dev.plone.org/plone/ticket/8336: already 
  quoted characters in a "Link" url should not be quoted again on edit. 
  [witsch] 

- Removed empty test_getobjpositioninparent test from the base test case.
  [hannosch]

- Adjusted tests to reflect using png instead of gifs for content types.
  [hannosch]

- Use human understandable language for describing the relative date range
  criteria. This closes http://dev.plone.org/plone/ticket/6841.
  [hannosch]

- Fixed duplicate link icon in the custom topic view. This closes
  http://dev.plone.org/plone/ticket/6049.
  [hannosch]

- Fixed invalid field condition that prevented you from being able to edit
  the "Inherit Criteria" value on a collection once it had been created.
  This closes http://dev.plone.org/plone/ticket/6527.
  [hannosch]

- Removed confusing behavior of ATEvent mixing eventType and Subject.